radix-engine-tests/tests/dec_macros/src/dec_err_int_suffix.stderr
error: No suffix is allowed. Remove the i64.
 --> src/dec_err_int_suffix.rs:4:29
  |
4 |     const X: Decimal = dec!(11_i64);
  |                             ^^^^^^
