radix-engine-tests/tests/dec_macros/src/dec_err_int_suffix.rs
use radix_engine_tests::prelude::*;

fn main() {
    const X: Decimal = dec!(11_i64);
}
